--- a/application/admin/view/profile/index.html
+++ b/application/admin/view/profile/index.html
@@ -16,32 +16,32 @@
                         <tr>
                             <td class="tdleft">{:__('Username')}<span class="tips">*</span></td>
                             <td class="tdright">
-                                <input type="text" name="username" autocomplete="off" value="{$admin.username}" data-rule="required;username" placeholder="登录账号" class="layui-input">
+                                <input type="text" name="username" autocomplete="off" value="{$admin.username}" data-rule="required;username" placeholder="" class="layui-input">
                                 <input type="hidden" name="id" lay-verify="id" value="{$admin.id}">
                             </td>
                         </tr>
                         <tr>
                             <td class="tdleft">{:__('Nickname')}</td>
                             <td class="tdright">
-                                <input type="nickname" name="nickname" placeholder="昵称" value="{$admin.nickname}" data-rule="required" autocomplete="off" class="layui-input">
+                                <input type="nickname" name="nickname" placeholder="" value="{$admin.nickname}" data-rule="required" autocomplete="off" class="layui-input">
                             </td>
                         </tr>
                         <tr>
                             <td class="tdleft">{:__('Email')}</td>
                             <td class="tdright">
-                                <input type="email" name="email" placeholder="邮箱" value="{$admin.email}" autocomplete="off" data-rule="{required;email}" class="layui-input">
+                                <input type="email" name="email" placeholder="" value="{$admin.email}" autocomplete="off" data-rule="{required;email}" class="layui-input">
                             </td>
                         </tr>
                         <tr>
                             <td class="tdleft">{:__('Password')}</td>
                             <td class="tdright">
-                                <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">
+                                <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="" autocomplete="off" class="layui-input">
                             </td>
                         </tr>
                         <tr>
                             <td class="tdleft">{:__('Confirm password')}</td>
                             <td class="tdright">
-                                <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">
+                                <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder=""  autocomplete="off" class="layui-input">
                             </td>
                         </tr>
                         <tr>
