--- a/application/admin/view/addon/index.html
+++ b/application/admin/view/addon/index.html
@@ -64,15 +64,15 @@
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'id', title: 'ID', sort: true,excel_width:15}
-                ,{field:'name', title: '插件名称',excel_width:15, templet: '#nameTpl'}
-                ,{field:'title', title: '简述',excel_width:15}
-                ,{field:'describe', title: '插件描述', excel_width:15}
-                ,{field:'author', title: '作者', sort: true,excel_width:15}
-                ,{field:'download_count', title: '下载次数', sort: true,excel_width:15}
-                ,{field:'version', title: '版本', sort: true,excel_width:15}
-                ,{field:'status', title: '状态', sort: true,excel_width:15,templet: '#switchStatus', sort: true}
+                ,{field:'name', title: "{:__('Plugin name')}",excel_width:15, templet: '#nameTpl'}
+                ,{field:'title', title: "{:__('Title')}",excel_width:15}
+                ,{field:'describe', title: "{:__('Describe')}", excel_width:15}
+                ,{field:'author', title: "{:__('Author')}", sort: true,excel_width:15}
+                ,{field:'download_count', title: "{:__('Download count')}", sort: true,excel_width:15}
+                ,{field:'version', title: "{:__('Version')}", sort: true,excel_width:15}
+                ,{field:'status', title: "{:__('Status')}", sort: true,excel_width:15,templet: '#switchStatus', sort: true}
 //                ,{field:'create_time', title: '创建时间',excel_width:15}
-                ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:150}
+                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#actionbar', width:150}
             ]]
             ,page: {
                 layout: ['limit', 'count', 'prev', 'page', 'next', 'skip']
