--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -62,7 +62,11 @@
         </div>
     </div>
 </div>
-
+<ul class="layer_notice" style="display: block;">
+    <li><a href="http://fly.layui.com/jie/5366/" target="_blank">1. layer 系列常见问题的处理和相关实用干货集锦</a></li>
+    <!--<li><a href="https://github.com/sentsin/layer/blob/master/CHANGELOG.md" target="_blank">2. layer 所有版本完整更新日志</a></li>-->
+    <!--<li><a href="http://fly.layui.com/jie/2461.html" target="_blank">3. 关注 layui 微信公众号，随时随地获取最新动态</a></li>-->
+</ul>
 <script src="__STATIC__/layui/layui.js"></script>
 <script>
     layui.config({
@@ -73,7 +77,7 @@
     }).link(
         " __STATIC__/style/jquery.validator.css"
     ).link("__STATIC__/style/toastr.css")
-    .use(['index', 'user','formValidator'], function(){
+    .use(['index', 'formValidator'], function(){
         var $ = layui.$
             ,setter = layui.setter
             ,admin = layui.admin
