--- a/application/admin/view/user/rule/edit.html
+++ b/application/admin/view/user/rule/edit.html
@@ -71,7 +71,7 @@
 <script>
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
-        skin: 'layui-layer-we'
+//        skin: 'layui-layer-we'
     }).extend({
         index: 'lib/index' //主入口模块
 //        ,validator:'jquery.validator'
