--- a/application/admin/view/user/rule/index.html
+++ b/application/admin/view/user/rule/index.html
@@ -46,7 +46,7 @@
     var ptable=null,treeGrid=null,tableId = 'tableReload',layer=null;
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
-        skin: 'layui-layer-we'
+//        skin: 'layui-layer-we'
     }).extend({
         index: 'lib/index' //主入口模块
     }).use(['jquery','index','treeGrid','element','form','authtree','we','weTable','weTreeGrid'], function(){
