--- a/public/static/style/green-header.css
+++ b/public/static/style/green-header.css
@@ -14,6 +14,17 @@
     background-color: #009688;
 }
 
+/*.layui-nav-tree li:hover{*/
+    /*background-color: #009688 !important;*/
+/*}*/
+/*.layui-nav-tree li:hover .layui-nav-more,.layui-nav-tree li:hover .layui-nav-mored {*/
+    /*border-top-color: #009688 !important;*/
+    /*border-bottom-color: #009688 !important;*/
+/*}*/
+
+/*.layui-nav-tree li a:hover{*/
+    /*color: #ffffff !important;*/
+/*}*/
 .layui-layout-admin .layui-header a, .layui-layout-admin .layui-header a cite {
     color: #f8f8f8;
 }
