--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -96,12 +96,20 @@ html {
 }
 
 .layui-layout-admin .layui-header .layui-nav-child {
-    top: 55px
+    top: 50px;
+    padding: 0px !important;
+    border: none !important;
+    box-shadow: 1px 2px 10px rgba(0,0,0,.3);
+}
+
+.layui-layout-admin .layui-header .layui-nav-child dd:hover,.layui-layout-admin .layui-header .layui-nav-child dd a:hover{
+    background-color: #009688 !important;
+    color:#ffffff;
 }
 
 .layui-layout-admin .layui-header .layui-layout-right .layui-nav-child {
-    left: auto;
-    right: 0
+    /*left: auto;*/
+    /*right: 0*/
 }
 
 .layui-layout-admin .layui-header .layui-nav .layui-nav-child dd.layui-this, .layui-layout-admin .layui-header .layui-nav .layui-nav-child dd.layui-this a {
