--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -6,12 +6,12 @@
                 <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
             </a>
         </li>
-        <li class="layui-nav-item layui-this"><a href="">控制台</a></li>
-        <li class="layui-nav-item"><a href="">订单管理</a></li>
-        <li class="layui-nav-item"><a href="">会员管理</a></li>
-        <li class="layui-nav-item"><a href="">营销管理</a></li>
-        <li class="layui-nav-item"><a href="">评分关怀</a></li>
-        <li class="layui-nav-item"><a href="">后台管理</a></li>
+        <li class="layui-nav-item layui-this"><a href="javascript:void(0);">{:__('Home')}</a></li>
+        <li class="layui-nav-item"><a href="javascript:void(0);">{:__('Order management')}</a></li>
+        <li class="layui-nav-item"><a href="javascript:void(0);">{:__('Member management')}</a></li>
+        <li class="layui-nav-item"><a href="javascript:void(0);">{:__('Marketing management')}</a></li>
+        <li class="layui-nav-item"><a href="javascript:void(0);">{:__('Scoring management')}</a></li>
+        <li class="layui-nav-item"><a href="javascript:void(0);">{:__('Backstage management')}</a></li>
     </ul>
 
     <!--<ul class="layui-nav layui-bg-green ">-->
