--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -6,7 +6,7 @@
         </div>
 
         <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
-            {$menulist}
+            {$menulist[222]}
             <!--<li data-name="home" class="layui-nav-item layui-nav-itemed">-->
                 <!--<a href="javascript:;" lay-tips="主页">-->
                     <!--<i class="layui-icon layui-icon-home"></i>-->
