--- a/application/admin/view/common/script.html
+++ b/application/admin/view/common/script.html
@@ -1,5 +1,6 @@
 <script>
     var clear_cache_url = "{:url('ajax/clearcache')}";
+//    var menulist = {$menulist};
     layui.config({
         base: "__STATIC__/" //静态资源所在路径
     }).extend({
