--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -37,7 +37,7 @@ html {
 
 .layui-layout-admin .layui-side {
     width: 220px;
-    top: 0;
+    top: 50px;
     z-index: 1001
 }
 
@@ -65,6 +65,18 @@ html {
     left: 220px
 }
 
+.layadmin-pagetabs, .layui-layout-admin .layui-body{
+    left: 0px
+}
+
+.layui-layout-admin .layui-side,#LAY_app_tabs{
+    display: none;
+}
+
+.layui-layout-admin .layui-body{
+    top:50px;
+}
+
 .layadmin-pagetabs {
     position: fixed;
     top: 50px;
@@ -77,7 +89,7 @@ html {
 }
 
 .layui-layout-admin .layui-body {
-    top: 90px;
+    /*top: 90px;*/
     bottom: 0
 }
 
@@ -293,7 +305,7 @@ html {
 
 .layui-side-menu .layui-nav {
     width: 220px;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     background: 0 0
 }
 
