--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -9,8 +9,9 @@
                 <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
             </a>
         </li>
+        <!--<li class="layui-nav-item nav_menu layui-this"><a href="/admin/dashboard/detail"  data-id="{$key}">{:__('Situational awareness')}</a></li>-->
         {foreach $nav_list as $key=>$vo }
-            <li class="layui-nav-item nav_menu {if condition="$key eq 215"}layui-this{/if}"><a {if condition="$key eq 215"}lay-href="{:url('dashboard/detail')}"{else/}lay-href="{$nav_url[$key]}"{/if} href="javascript:void(0);" data-id="{$key}">{:__($vo)}</a></li>
+            <li class="layui-nav-item nav_menu {if condition="max($max_weigh) eq $vo['weigh']"}layui-this{/if}"><a lay-href="{$nav_url[$key]}" href="javascript:void(0);" data-id="{$key}">{:__($vo['title'])}</a></li>
         {/foreach}
         <!--<li class="layui-nav-item" data-id=""><a href="javascript:void(0);">{:__('Home')}</a></li>-->
         <!--<li class="layui-nav-item"><a href="javascript:void(0);">{:__('Order management')}</a></li>-->
