--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -1,7 +1,7 @@
 {extend name="layout/default" /}
 {block name="content"}
 <body class="layui-layout-body" layadmin-themealias="green-header">
-<div id="LAY_app">
+<div id="LAY_app" class="layadmin-side-shrink">
     <div class="layui-layout layui-layout-admin">
         {include file="common/header" /}
         {include file="common/menu" /}
