--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -118,12 +118,42 @@ html {
     background-color: #009688 !important;
     color:#ffffff;
 }
-
-.layui-layout-admin .layui-header .layui-layout-right .layui-nav-child {
-    /*left: auto;*/
-    /*right: 0*/
+.layui-layout-admin .layui-header .layui-layout-left li{
+    /*position: absolute;*/
 }
-
+.layui-layout-admin .layui-header .layui-layout-left .layui-nav-child {
+    margin: 0 auto;
+    /*right: 30% !important;*/
+    /*position: relative;*/
+    width: 728px;
+}
+.layui-layout-admin .layui-header .layui-nav ul{
+    left: 5%;
+    background: #ffffff;
+    position: absolute;
+    width: 780px;
+    border: none !important;
+    line-height: 36px;
+    border-radius: 2px;
+    white-space: nowrap;
+    top: 50px;
+    z-index: 199;
+    box-shadow: 1px 3px 5px #cccc;
+    min-height: 100px;
+    border-bottom: 1px solid #dcdcdc;
+}
+.layui-layout-admin .layui-header .layui-nav ul li{
+    display: inline-block;
+    cursor: pointer;
+}
+.layui-layout-admin .layui-header .layui-nav ul li a{
+    color: #666;
+    padding: 0 20px;
+}
+.layui-layout-admin .layui-header .layui-nav ul li:hover,.layui-layout-admin .layui-header .layui-nav ul li a:hover{
+    background-color: #009688 !important;
+    color:#ffffff !important;
+}
 .layui-layout-admin .layui-header .layui-nav .layui-nav-child dd.layui-this, .layui-layout-admin .layui-header .layui-nav .layui-nav-child dd.layui-this a {
     background: 0 0
 }
@@ -255,7 +285,7 @@ html {
 }
 
 .layui-layout-admin .layui-layout-left .layui-nav-item {
-    margin: 0 20px
+    margin: 0 4px
 }
 
 .layui-layout-admin .layui-input-search {
@@ -266,7 +296,7 @@ html {
     cursor: text
 }
 
-.layui-layout-admin .layui-layout-left a, .layui-layout-admin .layui-layout-right {
+.layui-layout-admin .layui-layout-left, .layui-layout-admin .layui-layout-right {
     padding: 0
 }
 
