--- a/application/admin/view/common/tabs.html
+++ b/application/admin/view/common/tabs.html
@@ -16,7 +16,7 @@
     </div>
     <div class="layui-tab" lay-unauto lay-allowClose="true" lay-filter="layadmin-layout-tabs">
         <ul class="layui-tab-title" id="LAY_app_tabsheader">
-            <li lay-id="/admin/dashboard/detail" lay-attr="/admin/dashboard/detail" class="layui-this">{:__('Situational awareness')}</li>
+            <li lay-id="/admin/dashboard/detail" lay-attr="/admin/dashboard/detail" class="layui-this"></li>
         </ul>
     </div>
 </div>
