--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -1,7 +1,7 @@
 {extend name="layout/default" /}
 {block name="content"}
 <body class="layui-layout-body" layadmin-themealias="green-header">
-<div id="LAY_app" class="layadmin-side-shrink">
+<div id="LAY_app" class="">
     <div class="layui-layout layui-layout-admin">
         {include file="common/header" /}
         {include file="common/menu" /}
@@ -10,7 +10,9 @@
         <div class="layui-body" id="LAY_app_body">
             <div class="layadmin-tabsbody-item layui-show">
 
-                <iframe src="{:url('dashboard/detail')}" frameborder="0" class="layadmin-iframe"></iframe>
+                <iframe src="{:url('dashboard/console')}" frameborder="0" class="layadmin-iframe">
+
+                </iframe>
 
             </div>
         </div>
