--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -10,7 +10,7 @@
         <div class="layui-body" id="LAY_app_body">
             <div class="layadmin-tabsbody-item layui-show">
 
-                <iframe src="{:url('dashboard/console')}" frameborder="0" class="layadmin-iframe">
+                <iframe src="{:url('/admin/order/index')}" frameborder="0" class="layadmin-iframe">
 
                 </iframe>
 
