--- a/application/admin/view/auth/rule/view.html
+++ b/application/admin/view/auth/rule/view.html
@@ -1,4 +1,4 @@
-{extend name="layout/default" /}
+{extend name="layout/default2" /}
 {block name="content"}
 <table class="layui-table" lay-even="" lay-skin="nob">
     <colgroup>
