--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -3,9 +3,7 @@
     <div class="layui-side-scroll">
 
         <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
-            {foreach $menulist1 as $key=>$vo }
-                {$vo}
-            {/foreach}
+            {$menulist1}
             <!--<li data-name="home" class="layui-nav-item layui-nav-itemed">-->
                 <!--<a href="javascript:;" lay-tips="主页">-->
                     <!--<i class="layui-icon layui-icon-home"></i>-->
