--- a/application/admin/view/auth/admin/add.html
+++ b/application/admin/view/auth/admin/add.html
@@ -1,4 +1,4 @@
-{extend name="layout/default" /}
+{extend name="layout/default2" /}
 {block name="content"}
 <body>
 <!--<div class="layui-container lay_top">-->
