--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -1,5 +1,4 @@
-{extend name="layout/default" /}
-{block name="content"}
+{include file="common/meta" /}
 <body class="layui-layout-body" layadmin-themealias="green-header">
 <div id="LAY_app" class="">
     <div class="layui-layout layui-layout-admin">
@@ -267,9 +266,7 @@
     </div>
 </div>
 </div>
-{/block}
-
-{block name="script"}
+<script src="__STATIC__/layui/layui.js"></script>
 <script>
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
@@ -296,4 +293,3 @@
 </script>
 </body>
 </html>
-{/block}
