--- a/application/admin/view/layout/default.html
+++ b/application/admin/view/layout/default.html
@@ -1,7 +1,23 @@
 {include file="common/meta" /}
-{block name="content"}
+<body class="layui-layout-body" layadmin-themealias="green-header">
+<div id="LAY_app" class="">
+    <div class="layui-layout layui-layout-admin">
+        {include file="common/header" /}
+        {include file="common/menu" /}
+        {include file="common/tabs" /}
+        <!-- 主体内容 -->
+        <div class="layui-body" id="LAY_app_body">
+            <div class="layadmin-tabsbody-item layui-show">
+                {block name="content"}
 
-{/block}
+                {/block}
+            </div>
+        </div>
+        <!-- 辅助元素，一般用于移动设备下遮罩 -->
+        <div class="layadmin-body-shade" layadmin-event="shade"></div>
+        {include file="common/footer" /}
+    </div>
+</div>
 <script src="__STATIC__/layui/layui.js"></script>
 {block name="script"}
 {include file="common/script" /}
